# openforge

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PRIVACY.md  README.md
.claude/: settings.json
.claude/agents/: cli-dev.md  forge-dev.md  team-lead.md
.claude/commands/: dev-team-focus.md  dev-team-shutdown.md  dev-team.md
.claude/hooks/: block-sensitive-files.sh  post-edit-lint.sh  post-edit-test.sh
cli/: .coverage  .openforge-lock.json  CLAUDE.md  pyproject.toml
cli/.antigravity/skills/: helper  lint
cli/src/openforge/: __init__.py  add.py  api_client.py  auth.py  check.py  cli.py  config.py  config_file.py  find_cmd.py  installer.py  list_cmd.py  lock.py  plugins.py  publish.py  remove.py  skills.py  telemetry.py  types.py  update.py  validation.py
cli/src/openforge/agents/: base.py  registry.py
cli/src/openforge/agents/adapters/: claude.py  cursor.py
cli/src/openforge/providers/: base.py  forge.py  git.py  github.py  local.py  source_parser.py  wellknown.py
cli/tests/: conftest.py  test_adapters.py  test_add.py  test_agents.py  test_api_client.py  test_auth.py  test_check.py  test_cli.py  test_config.py  test_config_file.py  test_cursor_adapter.py  test_find.py  test_github.py  test_installer.py  test_list.py  test_lock.py  test_plugins.py  test_providers_forge.py  test_providers_git.py  test_providers_local.py  test_providers_wellknown.py  test_publish.py  test_remove.py  test_skills.py  test_source_parser.py  test_source_parser_extended.py  test_telemetry.py  test_types.py  test_update.py  test_validation.py
cli/tests/e2e/: conftest.py  test_auth_smoke.py  test_cli_smoke.py
cli/tests/integration/: conftest.py  test_api_client_transport.py  test_auth_transport.py  test_check.py  test_find.py  test_publish.py  test_search_transport.py  test_telemetry_integration.py
forge/: .env.example  CLAUDE.md  Dockerfile  bunfig.toml  package-lock.json  package.json  playwright.config.ts  tsconfig.json  worker.js  wrangler.toml
forge/e2e/: helpers.ts  (+10 more)
scripts/: dev-team-focus.sh  dev-team-setup.sh  require-forge.sh  test-e2e-setup.sh  test-e2e-teardown.sh
tasks/: prd-openforge-platform.md
(+89 files in other folders)
